--- a/M01S01/tema/ex01/index.html
+++ b/M01S01/tema/ex01/index.html
@@ -27,9 +27,17 @@
 
       <br><br>
 
+      <label for="depth" >Adancime</label>
+      <input 
+        type="text" 
+        id="depth" 
+        name="depth" 
+        placeholder="Adancime"
+      >
+
       <button type="submit">Calculeaza:</button>
 
-      <p>Rezultat: <span id="result"></span></p>
+      <p>Volumul este: <span id="result"></span></p>
     </fieldset>
   </form>
 
