--- a/M01S02/ex04/html/index.html
+++ b/M01S02/ex04/html/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Parent Folders</title>
+  <meta charset="utf-8">
+  <title>Parent Folders</title>
 </head>
 <body>
-    
+
+  <script src="../vendor/utils.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 </html>
