--- a/M01S03/ex02/index.html
+++ b/M01S03/ex02/index.html
@@ -7,7 +7,19 @@
   <body>
 
     <script>
+      var person = {
+        name: 'Dragos',
+        surname: 'Iordache',
+        age: 32,
+        petOwner: false,
+        skills: {
+          html: true,
+          css: true,
+          javaScript: false
+        }
+      };
 
+      console.log(person.skills.javaScript);
     </script>
   </body>
 </html>
