--- a/M01S04/ex01/index.html
+++ b/M01S04/ex01/index.html
@@ -5,9 +5,22 @@
     <title>Flow</title>
 </head>
 <body>
+    <p id="message"></p>
 
     <script>
+        var value = window.prompt('Introdu o valoare:');
+        var messageElement = document.getElementById('message');
+        var message = '';
 
+        if (value % 2 === 0) {
+            message = 'Valorea este para.';
+        } else {
+            message = 'Valorea este impara.';
+        }
+
+        messageElement.innerText = message;
+
+        console.log(message);
     </script>
 </body>
 </html>
