--- a/M01S04/ex01/number.html
+++ b/M01S04/ex01/number.html
@@ -18,14 +18,12 @@
 
     if (number > testNumber) {
       message = `Numarul este mai mare decat ${testNumber}`;
+    } else if (number === testNumber) {
+      message = `Numarul este ${testNumber}!`;
     } else {
       message = `Numarul este mai mic decat ${testNumber}`;
     }
-
-    if (number === testNumber) {
-      message = `Numarul este ${testNumber}!`;
-    }
-
+    
     messageElement.innerText = message;
   </script>
 </body>
