--- a/M01S04/ex03/index.html
+++ b/M01S04/ex03/index.html
@@ -7,5 +7,22 @@
 <body>
 
     <!-- insert script tag here -->
+    <script>
+        var errorCode = 100 ;
+
+        switch (errorCode) {
+            case 100:
+                console.log('Error 100');
+            break;
+            case 200:
+                console.log('Error 200') ;
+            break;
+            case 300:
+                console.log('Error 300');
+            break;
+            default: 
+            console.log('something else');
+        }
+    </script>
 </body>
 </html>
