--- a/M01S04/ex02/index.html
+++ b/M01S04/ex02/index.html
@@ -6,25 +6,24 @@
 </head>
 <body>
 
-    <!-- insert script tag here -->
     <script>
-        var errorCode = 0
-        if (errorCode === 0) {
-            console.log(' No error');
-        } else if (errorCode === 100) {
-            console.log('Error 100 occured')
-        } else if (errorCode === 200) {
-            console.log('Error 200 occured');
-        } else if (errorCode === 300) {
-            console.log('Error 300 occured');
-        } else if (errorCode === 400) {
-            console.log('Error 400 occured');
-        } else if (errorCode === 500) {
-            console.log('Error 500 occured');
-        } else {
-            console.log('Something else')
-        }
+        var errorCode = 'a';
 
+        if (errorCode === 0) {
+            console.log('No error');
+        } else if (errorCode === 100) {
+            console.log('Error 100');
+        } else if (errorCode === 200) {
+            console.log('Error 200');
+        } else if (errorCode === 300) {
+            console.log('Error 300');
+        } else if (errorCode === 400) {
+            console.log('Error 400');
+        } else if (errorCode === 500) {
+            console.log('Error 500');
+        } else {
+            console.log('Something else');
+        }
     </script>
 </body>
 </html>
