--- a/M01S04/ex03/index.html
+++ b/M01S04/ex03/index.html
@@ -6,22 +6,19 @@
 </head>
 <body>
 
-    <!-- insert script tag here -->
     <script>
-        var errorCode = 100 ;
+        var errorCode = 200;
 
         switch (errorCode) {
             case 100:
                 console.log('Error 100');
             break;
             case 200:
-                console.log('Error 200') ;
-            break;
+                console.log('Error 200');
             case 300:
                 console.log('Error 300');
-            break;
-            default: 
-            console.log('something else');
+            default:
+                console.log('Something else');
         }
     </script>
 </body>
