--- a/M02S01/ex03/index.html
+++ b/M02S01/ex03/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Object.create()</title>    
+    <title>Object.create()</title>
 </head>
 <body>
-  
-  <!-- insert script element here-->
+
+  <script src="app.js"></script>
 </body>
 </html>
