--- a/M02S02/ex01/index.html
+++ b/M02S02/ex01/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Intro to jQuery</title>        
-    <style>
-      .error {
-        color: red;
-      }
-    </style>
+  <meta charset="utf-8">
+  <title>Intro to jQuery</title>
+  <style>
+    .error {
+      color: red;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 1290px;
+      margin: 0 auto;
+    }
+
+  </style>
 </head>
 <body>
 
