--- a/M02S02/ex02/index.html
+++ b/M02S02/ex02/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Person Form</title>
 </head>
+
 <body>
   <form id="personForm">
     <fieldset>
@@ -24,7 +26,7 @@
 
       <br><br>
 
-      <label for="age">Varsta</label>
+      <label for="age">Varsta:</label>
       <input
         type="text"
         name="age"
@@ -37,6 +39,59 @@
 
     <fieldset>
       <legend>Detalii</legend>
+
+      <label for="skills">Abilitati:</label>
+      <input
+        type="text"
+        name="skills"
+      >
+      <button
+        type="button"
+        id="addSkill"
+      >+</button>
+    </fieldset>
+
+    <input
+      type="checkbox"
+      name="has-pets"
+      id="has-pets"
+    >
+    <label for="has-pets">Are animale de casa</label>
+
+    <fieldset
+      style="display: none;"
+      class="pet-form"
+    >
+      <legend>Adauga animal</legend>
+
+      <label>Specie:</label>
+      <input
+        type="text"
+        name="species"
+      >
+
+      <br><br>
+
+      <label>Nume:</label>
+      <input
+        type="text"
+        name="pet-name"
+      >
+
+      <br><br>
+
+      <label>Varsta:</label>
+      <input
+        type="text"
+        name="pet-age"
+      >
+
+      <br><br>
+
+      <button
+        type="button"
+        id="addPet"
+      >Adauga Animal</button>
     </fieldset>
   </form>
 
@@ -44,7 +99,16 @@
 
   </div>
 
+  <div class="person-skills">
+
+  </div>
+
+  <div class="person-pets">
+
+  </div>
+
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="app.js"></script>
 </body>
+
 </html>
