--- a/M02S02/ex02/index.html
+++ b/M02S02/ex02/index.html
@@ -103,6 +103,39 @@
 
   </div>
 
+  <fieldset class="friend-form"">
+    <legend>Prieten</legend>
+    <label for="">Nume:</label>
+    <input type="text" name="friend-name">
+
+    <br><br>
+
+    <label>Name:</label>
+    <input type="text"
+       name="friend-surname"
+      >
+
+    <br><br>
+
+    <label>Varsta:</label>
+    <input type="text" 
+      name="friend-age"
+    >
+
+    <br><br>
+
+    <button 
+      type="button" 
+      id="addFriend"
+    >Add friend</button>
+
+  </fieldset>
+
+  <div class="person-friend">
+    
+  </div>
+
+
   <div class="person-pets">
 
   </div>
