--- a/M02S03/ex03/index.html
+++ b/M02S03/ex03/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <title>DOM Events - Mouseover, mouseout</title>        
-    <style>
-      body {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
+  <meta charset="utf-8">
+  <title>DOM Events - Mouseover, mouseout</title>
+  <style>
+    body {
+      width: 100vw;
+      height: 100vh;
+      /* display: flex;
         justify-content: center;
-        align-items: center;
-      }
-      .stage {
-        width: 300px;
-        height: 300px;
-        border: 1px solid #000;
-      }
-    </style>
+        align-items: center; */
+    }
+
+    .stage {
+      width: 300px;
+      height: 300px;
+      border: 1px solid #000;
+    }
+  </style>
 </head>
+
 <body>
 
   <div class="stage">
@@ -26,4 +29,5 @@
   </div>
   <script src="app.js"></script>
 </body>
+
 </html>
