--- a/M02S03/ex05/index.html
+++ b/M02S03/ex05/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <title>DOM Events - resize</title>        
+  <meta charset="utf-8">
+  <title>DOM Events - resize</title>
 
 </head>
-<body>
 
+<body>
+  <p class="message"></p>
+  <p id="my-id"></p>
 
   <script src="app.js"></script>
 </body>
+
 </html>
