--- a/M02S03/ex05/index.html
+++ b/M02S03/ex05/index.html
@@ -10,6 +10,7 @@
 <body>
   <p class="message"></p>
   <p id="my-id"></p>
+  <p id="totalSurface"> </p>
 
   <script src="app.js"></script>
 </body>
