--- a/M02S03/ex04/index.html
+++ b/M02S03/ex04/index.html
@@ -11,7 +11,13 @@
 
   <img
     src="http://lorempixel.com/output/food-q-c-350-350-7.jpg"
+    class="image-x"
+  >
+
+  <img
+    src="https://placekitten.com/408/287"
     class="image"
+    alt=""
   >
 
   <p class="message-para">Imaginea se incarca...</p>
