--- a/M02S04/ex02/index.html
+++ b/M02S04/ex02/index.html
@@ -16,6 +16,13 @@
 <body>
   
   <div class="box"></div>
+  <button class="btn">Red</button>
+  <button class="btn">Green</button>
+  <button class="btn">Blue</button>
+
+  <input type="color" id="color-input">
+  <button>Apply</button>
+  <button id="reset-bg">Reset</button>
 
   <script src="app.js"></script>
 </body>
