--- a/M02S03/Tema/ex06/index.html
+++ b/M02S03/Tema/ex06/index.html
@@ -26,6 +26,8 @@
       <h1>Peste 1000</h1>
     </article>
   </section>
+
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
