--- a/M02S03/Tema/ex07/index.html
+++ b/M02S03/Tema/ex07/index.html
@@ -8,6 +8,8 @@
 <body>
 
   <button class="btn">click</button>
+
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
