--- a/M02S03/Tema/ex09/index.html
+++ b/M02S03/Tema/ex09/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>DOM Events - resize</title>        
-
+  <meta charset="utf-8">
+  <title>DOM Events - resize</title>
+    
 </head>
 <body>
-  <h1>Navigatia mea</h1>
-  <ul>
+  <h1 class="navigation">Navigatia mea</h1>
+  <ul class="my-list">
     <li><a href="">link1</a></li>
     <li><a href="">link2</a></li>
     <li><a href="">link3</a></li>
